# wgdhcp

./: Cargo.toml  README.md  args.yaml  conf  kkk  storage.yaml
docker/: Dockerfile  docker-compose.yaml
docker/config/: wgdhc.yaml
example/: add.yaml  config.yaml  init.yaml
proto/: service.proto
src/: add.rs  add_key.rs  client.rs  genconfig.rs  init.rs  ls.rs  main.rs  service.rs  start.rs  storing.rs
src/commands/: init.rs  ls.rs  mod.rs  run_server.rs
src/common/: config.rs  custom.rs  mod.rs  proto.rs  storage.rs  wg.rs
src/service/: mod.rs
