[package]
name = "wg-internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
derive_more = "0.99.17"
ipnet = { version = "2.9.0", features = ["serde"] }
lazy_static = "1.4.0"
proc-macro2 = { version = "1.0.81", features = ["nightly"] }
prost = "0.12.4"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive", "std"] }
serde_yaml = "0.9.28"
shellexpand = "3.1.0"
tokio = { version = "1.37.0", features = ["macros", "full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
toml = "0.8.8"
tonic = "0.11.0"
url = { version = "2.5.0", features = ["serde"] }

[features]
nightly = []

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
